# bootstrap

./: .gitignore  README.md  main.html  pyproject.toml
src/: my_server.py
vebsite/: contacts.html
website/: categories.html  category1.html  contacts.html  main.html
website/data/: form_submissions.txt
